--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Security-Policy"
@@ -9,14 +9,8 @@
     <link href="./main.css" rel="stylesheet">
 </head>
 <body>
-<div class="taskbar">w3x-to-toml</div>
-<div class="buttons">
-    <button class="button-select" type="button">Add files</button>
-    <button class="button-clear" type="button" disabled>Clear</button>
-    <button class="button-start" type="button" disabled>Start</button>
-</div>
-<div class="files pre"></div>
-<div class="process pre"></div>
+<app-taskbar>wc3-utils</app-taskbar>
+<model-texture-path-clean></model-texture-path-clean>
 </body>
-<script src="./build/renderer.js"></script>
+<script src="./build/renderer.js" ></script>
 </html>
