--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Security-Policy"
           content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
-    <title>w3x-to-toml</title>
+    <title>ElectroWar</title>
+    <link href="./fonts/USSRStencil/USSRStencil.css" rel="stylesheet">
     <link href="./fonts/JetBrainsMono/JetBrainsMono.css" rel="stylesheet">
     <link href="./main.css" rel="stylesheet">
 </head>
 <body>
-<app-taskbar>wc3-utils</app-taskbar>
+<app-taskbar>ElectroWar</app-taskbar>
 <model-texture-path-clean></model-texture-path-clean>
 </body>
-<script src="./build/renderer.js" ></script>
+<!--suppress HtmlUnknownTarget -->
+<script src="./build/renderer.js"></script>
 </html>
