--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>ElectroWar</title>
     <link href="./fonts/USSRStencil/USSRStencil.css" rel="stylesheet">
     <link href="./fonts/JetBrainsMono/JetBrainsMono.css" rel="stylesheet">
-    <link href="./main.css" rel="stylesheet">
+    <link href="render/main.css" rel="stylesheet">
 </head>
 <body>
 <app-taskbar>ElectroWar</app-taskbar>
 <model-texture-path-clean></model-texture-path-clean>
 </body>
 <!--suppress HtmlUnknownTarget -->
-<script src="./build/renderer.js"></script>
+<script src="./render/renderer.js" type="module"></script>
 </html>
