--- a/render/index.html
+++ b/render/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="Content-Security-Policy"
           content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
     <title>ElectroWar</title>
-    <link href="./fonts/USSRStencil/USSRStencil.css" rel="stylesheet">
-    <link href="./fonts/JetBrainsMono/JetBrainsMono.css" rel="stylesheet">
-    <link href="render/main.css" rel="stylesheet">
+    <link href="../fonts/USSRStencil/USSRStencil.css" rel="stylesheet">
+    <link href="../fonts/JetBrainsMono/JetBrainsMono.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
 </head>
 <body>
 <app-taskbar>ElectroWar</app-taskbar>
 <model-texture-path-clean></model-texture-path-clean>
 </body>
 <!--suppress HtmlUnknownTarget -->
-<script src="./render/renderer.js" type="module"></script>
+<script src="renderer.js" type="module"></script>
 </html>
